scripts/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement
Rule 2     statement_list -> statement statement_list
Rule 3     statement -> comment_block
Rule 4     statement -> package
Rule 5     statement -> version
Rule 6     statement -> factory
Rule 7     statement -> message
Rule 8     statement -> native
Rule 9     statement -> enum
Rule 10    comment_block -> COMMENT
Rule 11    comment_block -> COMMENT comment_block
Rule 12    package -> PACKAGE package_id
Rule 13    package_id -> ID
Rule 14    package_id -> ID PERIOD package_id
Rule 15    version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE
Rule 16    factory -> FACTORY ID LBRACE factory_creator factory_receiver RBRACE
Rule 17    factory -> FACTORY ID LBRACE factory_creator RBRACE
Rule 18    factory_creator -> FACTORY_CREATOR ID ID LPAREN ID RPAREN
Rule 19    factory_receiver -> FACTORY_RECEIVER ID ID LPAREN ID RPAREN
Rule 20    message -> MESSAGE ID LBRACE RBRACE
Rule 21    message -> MESSAGE ID LBRACE field_list RBRACE
Rule 22    message -> MESSAGE ID COLON MERGE ID LBRACE RBRACE
Rule 23    message -> MESSAGE ID COLON MERGE ID LBRACE field_list RBRACE
Rule 24    native -> NATIVE ID LBRACE native_line_list RBRACE
Rule 25    native_line_list -> native_line eol_comment
Rule 26    native_line_list -> native_line eol_comment native_line_list
Rule 27    native_line -> language_line
Rule 28    native_line -> representation_line
Rule 29    language_line -> LANGUAGE ID LANGLINE
Rule 30    representation_line -> REPRESENTATION typeid
Rule 31    representation_line -> REPRESENTATION COMBINE
Rule 32    enum -> ENUM ID LBRACE enum_value_list RBRACE
Rule 33    empty -> <empty>
Rule 34    eol_comment -> COMMENT
Rule 35    eol_comment -> empty
Rule 36    enum_value_list -> enum_val eol_comment
Rule 37    enum_value_list -> enum_val COMMA eol_comment
Rule 38    enum_value_list -> enum_val COMMA eol_comment enum_value_list
Rule 39    enum_val -> ID
Rule 40    enum_val -> ID EQUAL INTEGER_VALUE
Rule 41    field_list -> field_spec eol_comment
Rule 42    field_list -> field_spec eol_comment field_list
Rule 43    field_spec -> qualifier typeid ID eol_comment
Rule 44    field_spec -> qualifier typeid ID LBRACE DEFAULT EQUAL value RBRACE eol_comment
Rule 45    field_spec -> COMBINE typeid LBRACE field_list RBRACE eol_comment
Rule 46    qualifier -> REQUIRED
Rule 47    qualifier -> REPEATED
Rule 48    qualifier -> OPTIONAL
Rule 49    typeid -> ONOFF_T
Rule 50    typeid -> BOOL_T
Rule 51    typeid -> STRING_T
Rule 52    typeid -> BYTE_T
Rule 53    typeid -> INT8_T
Rule 54    typeid -> UINT8_T
Rule 55    typeid -> INT16_T
Rule 56    typeid -> UINT16_T
Rule 57    typeid -> INT32_T
Rule 58    typeid -> UINT32_T
Rule 59    typeid -> INT64_T
Rule 60    typeid -> UINT64_T
Rule 61    typeid -> FLOAT_T
Rule 62    typeid -> DOUBLE_T
Rule 63    typeid -> defined_type
Rule 64    defined_type -> ID
Rule 65    value -> INTEGER_VALUE
Rule 66    value -> FLOAT_VALUE
Rule 67    value -> BOOL_VALUE
Rule 68    value -> STRING_VALUE

Terminals, with rules where they appear

BOOL_T               : 50
BOOL_VALUE           : 67
BYTE_T               : 52
COLON                : 22 23
COMBINE              : 31 45
COMMA                : 37 38
COMMENT              : 10 11 34
DEFAULT              : 44
DOUBLE_T             : 62
ENUM                 : 32
EQUAL                : 40 44
FACTORY              : 16 17
FACTORY_CREATOR      : 18
FACTORY_RECEIVER     : 19
FLOAT_T              : 61
FLOAT_VALUE          : 66
ID                   : 13 14 16 17 18 18 18 19 19 19 20 21 22 22 23 23 24 29 32 39 40 43 44 64
INT16_T              : 55
INT32_T              : 57
INT64_T              : 59
INT8_T               : 53
INTEGER_VALUE        : 15 15 40 65
LANGLINE             : 29
LANGUAGE             : 29
LBRACE               : 16 17 20 21 22 23 24 32 44 45
LPAREN               : 18 19
MERGE                : 22 23
MESSAGE              : 20 21 22 23
NATIVE               : 24
ONOFF_T              : 49
OPTIONAL             : 48
PACKAGE              : 12
PERIOD               : 14 15
RBRACE               : 16 17 20 21 22 23 24 32 44 45
REPEATED             : 47
REPRESENTATION       : 30 31
REQUIRED             : 46
RPAREN               : 18 19
STRING_T             : 51
STRING_VALUE         : 68
UINT16_T             : 56
UINT32_T             : 58
UINT64_T             : 60
UINT8_T              : 54
VERSION              : 15
error                : 

Nonterminals, with rules where they appear

comment_block        : 3 11
defined_type         : 63
empty                : 35
enum                 : 9
enum_val             : 36 37 38
enum_value_list      : 32 38
eol_comment          : 25 26 36 37 38 41 42 43 44 45
factory              : 6
factory_creator      : 16 17
factory_receiver     : 16
field_list           : 21 23 42 45
field_spec           : 41 42
language_line        : 27
message              : 7
native               : 8
native_line          : 25 26
native_line_list     : 24 26
package              : 4
package_id           : 12 14
qualifier            : 43 44
representation_line  : 28
statement            : 1 2
statement_list       : 2 0
typeid               : 30 43 44 45
value                : 44
version              : 5

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement statement_list
    (3) statement -> . comment_block
    (4) statement -> . package
    (5) statement -> . version
    (6) statement -> . factory
    (7) statement -> . message
    (8) statement -> . native
    (9) statement -> . enum
    (10) comment_block -> . COMMENT
    (11) comment_block -> . COMMENT comment_block
    (12) package -> . PACKAGE package_id
    (15) version -> . VERSION INTEGER_VALUE PERIOD INTEGER_VALUE
    (16) factory -> . FACTORY ID LBRACE factory_creator factory_receiver RBRACE
    (17) factory -> . FACTORY ID LBRACE factory_creator RBRACE
    (20) message -> . MESSAGE ID LBRACE RBRACE
    (21) message -> . MESSAGE ID LBRACE field_list RBRACE
    (22) message -> . MESSAGE ID COLON MERGE ID LBRACE RBRACE
    (23) message -> . MESSAGE ID COLON MERGE ID LBRACE field_list RBRACE
    (24) native -> . NATIVE ID LBRACE native_line_list RBRACE
    (32) enum -> . ENUM ID LBRACE enum_value_list RBRACE

    COMMENT         shift and go to state 3
    PACKAGE         shift and go to state 9
    VERSION         shift and go to state 12
    FACTORY         shift and go to state 11
    MESSAGE         shift and go to state 16
    NATIVE          shift and go to state 7
    ENUM            shift and go to state 8

    comment_block                  shift and go to state 13
    package                        shift and go to state 14
    enum                           shift and go to state 10
    factory                        shift and go to state 4
    version                        shift and go to state 5
    statement                      shift and go to state 6
    statement_list                 shift and go to state 15
    message                        shift and go to state 1
    native                         shift and go to state 2

state 1

    (7) statement -> message .

    COMMENT         reduce using rule 7 (statement -> message .)
    PACKAGE         reduce using rule 7 (statement -> message .)
    VERSION         reduce using rule 7 (statement -> message .)
    FACTORY         reduce using rule 7 (statement -> message .)
    MESSAGE         reduce using rule 7 (statement -> message .)
    NATIVE          reduce using rule 7 (statement -> message .)
    ENUM            reduce using rule 7 (statement -> message .)
    $end            reduce using rule 7 (statement -> message .)


state 2

    (8) statement -> native .

    COMMENT         reduce using rule 8 (statement -> native .)
    PACKAGE         reduce using rule 8 (statement -> native .)
    VERSION         reduce using rule 8 (statement -> native .)
    FACTORY         reduce using rule 8 (statement -> native .)
    MESSAGE         reduce using rule 8 (statement -> native .)
    NATIVE          reduce using rule 8 (statement -> native .)
    ENUM            reduce using rule 8 (statement -> native .)
    $end            reduce using rule 8 (statement -> native .)


state 3

    (10) comment_block -> COMMENT .
    (11) comment_block -> COMMENT . comment_block
    (10) comment_block -> . COMMENT
    (11) comment_block -> . COMMENT comment_block

  ! shift/reduce conflict for COMMENT resolved as shift
    PACKAGE         reduce using rule 10 (comment_block -> COMMENT .)
    VERSION         reduce using rule 10 (comment_block -> COMMENT .)
    FACTORY         reduce using rule 10 (comment_block -> COMMENT .)
    MESSAGE         reduce using rule 10 (comment_block -> COMMENT .)
    NATIVE          reduce using rule 10 (comment_block -> COMMENT .)
    ENUM            reduce using rule 10 (comment_block -> COMMENT .)
    $end            reduce using rule 10 (comment_block -> COMMENT .)
    COMMENT         shift and go to state 3

  ! COMMENT         [ reduce using rule 10 (comment_block -> COMMENT .) ]

    comment_block                  shift and go to state 17

state 4

    (6) statement -> factory .

    COMMENT         reduce using rule 6 (statement -> factory .)
    PACKAGE         reduce using rule 6 (statement -> factory .)
    VERSION         reduce using rule 6 (statement -> factory .)
    FACTORY         reduce using rule 6 (statement -> factory .)
    MESSAGE         reduce using rule 6 (statement -> factory .)
    NATIVE          reduce using rule 6 (statement -> factory .)
    ENUM            reduce using rule 6 (statement -> factory .)
    $end            reduce using rule 6 (statement -> factory .)


state 5

    (5) statement -> version .

    COMMENT         reduce using rule 5 (statement -> version .)
    PACKAGE         reduce using rule 5 (statement -> version .)
    VERSION         reduce using rule 5 (statement -> version .)
    FACTORY         reduce using rule 5 (statement -> version .)
    MESSAGE         reduce using rule 5 (statement -> version .)
    NATIVE          reduce using rule 5 (statement -> version .)
    ENUM            reduce using rule 5 (statement -> version .)
    $end            reduce using rule 5 (statement -> version .)


state 6

    (1) statement_list -> statement .
    (2) statement_list -> statement . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement statement_list
    (3) statement -> . comment_block
    (4) statement -> . package
    (5) statement -> . version
    (6) statement -> . factory
    (7) statement -> . message
    (8) statement -> . native
    (9) statement -> . enum
    (10) comment_block -> . COMMENT
    (11) comment_block -> . COMMENT comment_block
    (12) package -> . PACKAGE package_id
    (15) version -> . VERSION INTEGER_VALUE PERIOD INTEGER_VALUE
    (16) factory -> . FACTORY ID LBRACE factory_creator factory_receiver RBRACE
    (17) factory -> . FACTORY ID LBRACE factory_creator RBRACE
    (20) message -> . MESSAGE ID LBRACE RBRACE
    (21) message -> . MESSAGE ID LBRACE field_list RBRACE
    (22) message -> . MESSAGE ID COLON MERGE ID LBRACE RBRACE
    (23) message -> . MESSAGE ID COLON MERGE ID LBRACE field_list RBRACE
    (24) native -> . NATIVE ID LBRACE native_line_list RBRACE
    (32) enum -> . ENUM ID LBRACE enum_value_list RBRACE

    $end            reduce using rule 1 (statement_list -> statement .)
    COMMENT         shift and go to state 3
    PACKAGE         shift and go to state 9
    VERSION         shift and go to state 12
    FACTORY         shift and go to state 11
    MESSAGE         shift and go to state 16
    NATIVE          shift and go to state 7
    ENUM            shift and go to state 8

    comment_block                  shift and go to state 13
    package                        shift and go to state 14
    enum                           shift and go to state 10
    factory                        shift and go to state 4
    version                        shift and go to state 5
    statement                      shift and go to state 6
    statement_list                 shift and go to state 18
    message                        shift and go to state 1
    native                         shift and go to state 2

state 7

    (24) native -> NATIVE . ID LBRACE native_line_list RBRACE

    ID              shift and go to state 19


state 8

    (32) enum -> ENUM . ID LBRACE enum_value_list RBRACE

    ID              shift and go to state 20


state 9

    (12) package -> PACKAGE . package_id
    (13) package_id -> . ID
    (14) package_id -> . ID PERIOD package_id

    ID              shift and go to state 22

    package_id                     shift and go to state 21

state 10

    (9) statement -> enum .

    COMMENT         reduce using rule 9 (statement -> enum .)
    PACKAGE         reduce using rule 9 (statement -> enum .)
    VERSION         reduce using rule 9 (statement -> enum .)
    FACTORY         reduce using rule 9 (statement -> enum .)
    MESSAGE         reduce using rule 9 (statement -> enum .)
    NATIVE          reduce using rule 9 (statement -> enum .)
    ENUM            reduce using rule 9 (statement -> enum .)
    $end            reduce using rule 9 (statement -> enum .)


state 11

    (16) factory -> FACTORY . ID LBRACE factory_creator factory_receiver RBRACE
    (17) factory -> FACTORY . ID LBRACE factory_creator RBRACE

    ID              shift and go to state 23


state 12

    (15) version -> VERSION . INTEGER_VALUE PERIOD INTEGER_VALUE

    INTEGER_VALUE   shift and go to state 24


state 13

    (3) statement -> comment_block .

    COMMENT         reduce using rule 3 (statement -> comment_block .)
    PACKAGE         reduce using rule 3 (statement -> comment_block .)
    VERSION         reduce using rule 3 (statement -> comment_block .)
    FACTORY         reduce using rule 3 (statement -> comment_block .)
    MESSAGE         reduce using rule 3 (statement -> comment_block .)
    NATIVE          reduce using rule 3 (statement -> comment_block .)
    ENUM            reduce using rule 3 (statement -> comment_block .)
    $end            reduce using rule 3 (statement -> comment_block .)


state 14

    (4) statement -> package .

    COMMENT         reduce using rule 4 (statement -> package .)
    PACKAGE         reduce using rule 4 (statement -> package .)
    VERSION         reduce using rule 4 (statement -> package .)
    FACTORY         reduce using rule 4 (statement -> package .)
    MESSAGE         reduce using rule 4 (statement -> package .)
    NATIVE          reduce using rule 4 (statement -> package .)
    ENUM            reduce using rule 4 (statement -> package .)
    $end            reduce using rule 4 (statement -> package .)


state 15

    (0) S' -> statement_list .



state 16

    (20) message -> MESSAGE . ID LBRACE RBRACE
    (21) message -> MESSAGE . ID LBRACE field_list RBRACE
    (22) message -> MESSAGE . ID COLON MERGE ID LBRACE RBRACE
    (23) message -> MESSAGE . ID COLON MERGE ID LBRACE field_list RBRACE

    ID              shift and go to state 25


state 17

    (11) comment_block -> COMMENT comment_block .

    COMMENT         reduce using rule 11 (comment_block -> COMMENT comment_block .)
    PACKAGE         reduce using rule 11 (comment_block -> COMMENT comment_block .)
    VERSION         reduce using rule 11 (comment_block -> COMMENT comment_block .)
    FACTORY         reduce using rule 11 (comment_block -> COMMENT comment_block .)
    MESSAGE         reduce using rule 11 (comment_block -> COMMENT comment_block .)
    NATIVE          reduce using rule 11 (comment_block -> COMMENT comment_block .)
    ENUM            reduce using rule 11 (comment_block -> COMMENT comment_block .)
    $end            reduce using rule 11 (comment_block -> COMMENT comment_block .)


state 18

    (2) statement_list -> statement statement_list .

    $end            reduce using rule 2 (statement_list -> statement statement_list .)


state 19

    (24) native -> NATIVE ID . LBRACE native_line_list RBRACE

    LBRACE          shift and go to state 26


state 20

    (32) enum -> ENUM ID . LBRACE enum_value_list RBRACE

    LBRACE          shift and go to state 27


state 21

    (12) package -> PACKAGE package_id .

    COMMENT         reduce using rule 12 (package -> PACKAGE package_id .)
    PACKAGE         reduce using rule 12 (package -> PACKAGE package_id .)
    VERSION         reduce using rule 12 (package -> PACKAGE package_id .)
    FACTORY         reduce using rule 12 (package -> PACKAGE package_id .)
    MESSAGE         reduce using rule 12 (package -> PACKAGE package_id .)
    NATIVE          reduce using rule 12 (package -> PACKAGE package_id .)
    ENUM            reduce using rule 12 (package -> PACKAGE package_id .)
    $end            reduce using rule 12 (package -> PACKAGE package_id .)


state 22

    (13) package_id -> ID .
    (14) package_id -> ID . PERIOD package_id

    COMMENT         reduce using rule 13 (package_id -> ID .)
    PACKAGE         reduce using rule 13 (package_id -> ID .)
    VERSION         reduce using rule 13 (package_id -> ID .)
    FACTORY         reduce using rule 13 (package_id -> ID .)
    MESSAGE         reduce using rule 13 (package_id -> ID .)
    NATIVE          reduce using rule 13 (package_id -> ID .)
    ENUM            reduce using rule 13 (package_id -> ID .)
    $end            reduce using rule 13 (package_id -> ID .)
    PERIOD          shift and go to state 28


state 23

    (16) factory -> FACTORY ID . LBRACE factory_creator factory_receiver RBRACE
    (17) factory -> FACTORY ID . LBRACE factory_creator RBRACE

    LBRACE          shift and go to state 29


state 24

    (15) version -> VERSION INTEGER_VALUE . PERIOD INTEGER_VALUE

    PERIOD          shift and go to state 30


state 25

    (20) message -> MESSAGE ID . LBRACE RBRACE
    (21) message -> MESSAGE ID . LBRACE field_list RBRACE
    (22) message -> MESSAGE ID . COLON MERGE ID LBRACE RBRACE
    (23) message -> MESSAGE ID . COLON MERGE ID LBRACE field_list RBRACE

    LBRACE          shift and go to state 31
    COLON           shift and go to state 32


state 26

    (24) native -> NATIVE ID LBRACE . native_line_list RBRACE
    (25) native_line_list -> . native_line eol_comment
    (26) native_line_list -> . native_line eol_comment native_line_list
    (27) native_line -> . language_line
    (28) native_line -> . representation_line
    (29) language_line -> . LANGUAGE ID LANGLINE
    (30) representation_line -> . REPRESENTATION typeid
    (31) representation_line -> . REPRESENTATION COMBINE

    LANGUAGE        shift and go to state 34
    REPRESENTATION  shift and go to state 36

    native_line                    shift and go to state 33
    language_line                  shift and go to state 35
    native_line_list               shift and go to state 37
    representation_line            shift and go to state 38

state 27

    (32) enum -> ENUM ID LBRACE . enum_value_list RBRACE
    (36) enum_value_list -> . enum_val eol_comment
    (37) enum_value_list -> . enum_val COMMA eol_comment
    (38) enum_value_list -> . enum_val COMMA eol_comment enum_value_list
    (39) enum_val -> . ID
    (40) enum_val -> . ID EQUAL INTEGER_VALUE

    ID              shift and go to state 41

    enum_val                       shift and go to state 39
    enum_value_list                shift and go to state 40

state 28

    (14) package_id -> ID PERIOD . package_id
    (13) package_id -> . ID
    (14) package_id -> . ID PERIOD package_id

    ID              shift and go to state 22

    package_id                     shift and go to state 42

state 29

    (16) factory -> FACTORY ID LBRACE . factory_creator factory_receiver RBRACE
    (17) factory -> FACTORY ID LBRACE . factory_creator RBRACE
    (18) factory_creator -> . FACTORY_CREATOR ID ID LPAREN ID RPAREN

    FACTORY_CREATOR shift and go to state 43

    factory_creator                shift and go to state 44

state 30

    (15) version -> VERSION INTEGER_VALUE PERIOD . INTEGER_VALUE

    INTEGER_VALUE   shift and go to state 45


state 31

    (20) message -> MESSAGE ID LBRACE . RBRACE
    (21) message -> MESSAGE ID LBRACE . field_list RBRACE
    (41) field_list -> . field_spec eol_comment
    (42) field_list -> . field_spec eol_comment field_list
    (43) field_spec -> . qualifier typeid ID eol_comment
    (44) field_spec -> . qualifier typeid ID LBRACE DEFAULT EQUAL value RBRACE eol_comment
    (45) field_spec -> . COMBINE typeid LBRACE field_list RBRACE eol_comment
    (46) qualifier -> . REQUIRED
    (47) qualifier -> . REPEATED
    (48) qualifier -> . OPTIONAL

    RBRACE          shift and go to state 46
    COMBINE         shift and go to state 50
    REQUIRED        shift and go to state 47
    REPEATED        shift and go to state 48
    OPTIONAL        shift and go to state 51

    qualifier                      shift and go to state 53
    field_spec                     shift and go to state 49
    field_list                     shift and go to state 52

state 32

    (22) message -> MESSAGE ID COLON . MERGE ID LBRACE RBRACE
    (23) message -> MESSAGE ID COLON . MERGE ID LBRACE field_list RBRACE

    MERGE           shift and go to state 54


state 33

    (25) native_line_list -> native_line . eol_comment
    (26) native_line_list -> native_line . eol_comment native_line_list
    (34) eol_comment -> . COMMENT
    (35) eol_comment -> . empty
    (33) empty -> .

    COMMENT         shift and go to state 55
    LANGUAGE        reduce using rule 33 (empty -> .)
    REPRESENTATION  reduce using rule 33 (empty -> .)
    RBRACE          reduce using rule 33 (empty -> .)

    eol_comment                    shift and go to state 56
    empty                          shift and go to state 57

state 34

    (29) language_line -> LANGUAGE . ID LANGLINE

    ID              shift and go to state 58


state 35

    (27) native_line -> language_line .

    COMMENT         reduce using rule 27 (native_line -> language_line .)
    LANGUAGE        reduce using rule 27 (native_line -> language_line .)
    REPRESENTATION  reduce using rule 27 (native_line -> language_line .)
    RBRACE          reduce using rule 27 (native_line -> language_line .)


state 36

    (30) representation_line -> REPRESENTATION . typeid
    (31) representation_line -> REPRESENTATION . COMBINE
    (49) typeid -> . ONOFF_T
    (50) typeid -> . BOOL_T
    (51) typeid -> . STRING_T
    (52) typeid -> . BYTE_T
    (53) typeid -> . INT8_T
    (54) typeid -> . UINT8_T
    (55) typeid -> . INT16_T
    (56) typeid -> . UINT16_T
    (57) typeid -> . INT32_T
    (58) typeid -> . UINT32_T
    (59) typeid -> . INT64_T
    (60) typeid -> . UINT64_T
    (61) typeid -> . FLOAT_T
    (62) typeid -> . DOUBLE_T
    (63) typeid -> . defined_type
    (64) defined_type -> . ID

    COMBINE         shift and go to state 68
    ONOFF_T         shift and go to state 59
    BOOL_T          shift and go to state 76
    STRING_T        shift and go to state 75
    BYTE_T          shift and go to state 74
    INT8_T          shift and go to state 65
    UINT8_T         shift and go to state 61
    INT16_T         shift and go to state 63
    UINT16_T        shift and go to state 73
    INT32_T         shift and go to state 64
    UINT32_T        shift and go to state 70
    INT64_T         shift and go to state 71
    UINT64_T        shift and go to state 72
    FLOAT_T         shift and go to state 62
    DOUBLE_T        shift and go to state 67
    ID              shift and go to state 66

    typeid                         shift and go to state 60
    defined_type                   shift and go to state 69

state 37

    (24) native -> NATIVE ID LBRACE native_line_list . RBRACE

    RBRACE          shift and go to state 77


state 38

    (28) native_line -> representation_line .

    COMMENT         reduce using rule 28 (native_line -> representation_line .)
    LANGUAGE        reduce using rule 28 (native_line -> representation_line .)
    REPRESENTATION  reduce using rule 28 (native_line -> representation_line .)
    RBRACE          reduce using rule 28 (native_line -> representation_line .)


state 39

    (36) enum_value_list -> enum_val . eol_comment
    (37) enum_value_list -> enum_val . COMMA eol_comment
    (38) enum_value_list -> enum_val . COMMA eol_comment enum_value_list
    (34) eol_comment -> . COMMENT
    (35) eol_comment -> . empty
    (33) empty -> .

    COMMA           shift and go to state 79
    COMMENT         shift and go to state 55
    RBRACE          reduce using rule 33 (empty -> .)

    eol_comment                    shift and go to state 78
    empty                          shift and go to state 57

state 40

    (32) enum -> ENUM ID LBRACE enum_value_list . RBRACE

    RBRACE          shift and go to state 80


state 41

    (39) enum_val -> ID .
    (40) enum_val -> ID . EQUAL INTEGER_VALUE

    COMMA           reduce using rule 39 (enum_val -> ID .)
    COMMENT         reduce using rule 39 (enum_val -> ID .)
    RBRACE          reduce using rule 39 (enum_val -> ID .)
    EQUAL           shift and go to state 81


state 42

    (14) package_id -> ID PERIOD package_id .

    COMMENT         reduce using rule 14 (package_id -> ID PERIOD package_id .)
    PACKAGE         reduce using rule 14 (package_id -> ID PERIOD package_id .)
    VERSION         reduce using rule 14 (package_id -> ID PERIOD package_id .)
    FACTORY         reduce using rule 14 (package_id -> ID PERIOD package_id .)
    MESSAGE         reduce using rule 14 (package_id -> ID PERIOD package_id .)
    NATIVE          reduce using rule 14 (package_id -> ID PERIOD package_id .)
    ENUM            reduce using rule 14 (package_id -> ID PERIOD package_id .)
    $end            reduce using rule 14 (package_id -> ID PERIOD package_id .)


state 43

    (18) factory_creator -> FACTORY_CREATOR . ID ID LPAREN ID RPAREN

    ID              shift and go to state 82


state 44

    (16) factory -> FACTORY ID LBRACE factory_creator . factory_receiver RBRACE
    (17) factory -> FACTORY ID LBRACE factory_creator . RBRACE
    (19) factory_receiver -> . FACTORY_RECEIVER ID ID LPAREN ID RPAREN

    RBRACE          shift and go to state 83
    FACTORY_RECEIVER shift and go to state 84

    factory_receiver               shift and go to state 85

state 45

    (15) version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .

    COMMENT         reduce using rule 15 (version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .)
    PACKAGE         reduce using rule 15 (version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .)
    VERSION         reduce using rule 15 (version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .)
    FACTORY         reduce using rule 15 (version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .)
    MESSAGE         reduce using rule 15 (version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .)
    NATIVE          reduce using rule 15 (version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .)
    ENUM            reduce using rule 15 (version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .)
    $end            reduce using rule 15 (version -> VERSION INTEGER_VALUE PERIOD INTEGER_VALUE .)


state 46

    (20) message -> MESSAGE ID LBRACE RBRACE .

    COMMENT         reduce using rule 20 (message -> MESSAGE ID LBRACE RBRACE .)
    PACKAGE         reduce using rule 20 (message -> MESSAGE ID LBRACE RBRACE .)
    VERSION         reduce using rule 20 (message -> MESSAGE ID LBRACE RBRACE .)
    FACTORY         reduce using rule 20 (message -> MESSAGE ID LBRACE RBRACE .)
    MESSAGE         reduce using rule 20 (message -> MESSAGE ID LBRACE RBRACE .)
    NATIVE          reduce using rule 20 (message -> MESSAGE ID LBRACE RBRACE .)
    ENUM            reduce using rule 20 (message -> MESSAGE ID LBRACE RBRACE .)
    $end            reduce using rule 20 (message -> MESSAGE ID LBRACE RBRACE .)


state 47

    (46) qualifier -> REQUIRED .

    ONOFF_T         reduce using rule 46 (qualifier -> REQUIRED .)
    BOOL_T          reduce using rule 46 (qualifier -> REQUIRED .)
    STRING_T        reduce using rule 46 (qualifier -> REQUIRED .)
    BYTE_T          reduce using rule 46 (qualifier -> REQUIRED .)
    INT8_T          reduce using rule 46 (qualifier -> REQUIRED .)
    UINT8_T         reduce using rule 46 (qualifier -> REQUIRED .)
    INT16_T         reduce using rule 46 (qualifier -> REQUIRED .)
    UINT16_T        reduce using rule 46 (qualifier -> REQUIRED .)
    INT32_T         reduce using rule 46 (qualifier -> REQUIRED .)
    UINT32_T        reduce using rule 46 (qualifier -> REQUIRED .)
    INT64_T         reduce using rule 46 (qualifier -> REQUIRED .)
    UINT64_T        reduce using rule 46 (qualifier -> REQUIRED .)
    FLOAT_T         reduce using rule 46 (qualifier -> REQUIRED .)
    DOUBLE_T        reduce using rule 46 (qualifier -> REQUIRED .)
    ID              reduce using rule 46 (qualifier -> REQUIRED .)


state 48

    (47) qualifier -> REPEATED .

    ONOFF_T         reduce using rule 47 (qualifier -> REPEATED .)
    BOOL_T          reduce using rule 47 (qualifier -> REPEATED .)
    STRING_T        reduce using rule 47 (qualifier -> REPEATED .)
    BYTE_T          reduce using rule 47 (qualifier -> REPEATED .)
    INT8_T          reduce using rule 47 (qualifier -> REPEATED .)
    UINT8_T         reduce using rule 47 (qualifier -> REPEATED .)
    INT16_T         reduce using rule 47 (qualifier -> REPEATED .)
    UINT16_T        reduce using rule 47 (qualifier -> REPEATED .)
    INT32_T         reduce using rule 47 (qualifier -> REPEATED .)
    UINT32_T        reduce using rule 47 (qualifier -> REPEATED .)
    INT64_T         reduce using rule 47 (qualifier -> REPEATED .)
    UINT64_T        reduce using rule 47 (qualifier -> REPEATED .)
    FLOAT_T         reduce using rule 47 (qualifier -> REPEATED .)
    DOUBLE_T        reduce using rule 47 (qualifier -> REPEATED .)
    ID              reduce using rule 47 (qualifier -> REPEATED .)


state 49

    (41) field_list -> field_spec . eol_comment
    (42) field_list -> field_spec . eol_comment field_list
    (34) eol_comment -> . COMMENT
    (35) eol_comment -> . empty
    (33) empty -> .

    COMMENT         shift and go to state 55
    COMBINE         reduce using rule 33 (empty -> .)
    REQUIRED        reduce using rule 33 (empty -> .)
    REPEATED        reduce using rule 33 (empty -> .)
    OPTIONAL        reduce using rule 33 (empty -> .)
    RBRACE          reduce using rule 33 (empty -> .)

    eol_comment                    shift and go to state 86
    empty                          shift and go to state 57

state 50

    (45) field_spec -> COMBINE . typeid LBRACE field_list RBRACE eol_comment
    (49) typeid -> . ONOFF_T
    (50) typeid -> . BOOL_T
    (51) typeid -> . STRING_T
    (52) typeid -> . BYTE_T
    (53) typeid -> . INT8_T
    (54) typeid -> . UINT8_T
    (55) typeid -> . INT16_T
    (56) typeid -> . UINT16_T
    (57) typeid -> . INT32_T
    (58) typeid -> . UINT32_T
    (59) typeid -> . INT64_T
    (60) typeid -> . UINT64_T
    (61) typeid -> . FLOAT_T
    (62) typeid -> . DOUBLE_T
    (63) typeid -> . defined_type
    (64) defined_type -> . ID

    ONOFF_T         shift and go to state 59
    BOOL_T          shift and go to state 76
    STRING_T        shift and go to state 75
    BYTE_T          shift and go to state 74
    INT8_T          shift and go to state 65
    UINT8_T         shift and go to state 61
    INT16_T         shift and go to state 63
    UINT16_T        shift and go to state 73
    INT32_T         shift and go to state 64
    UINT32_T        shift and go to state 70
    INT64_T         shift and go to state 71
    UINT64_T        shift and go to state 72
    FLOAT_T         shift and go to state 62
    DOUBLE_T        shift and go to state 67
    ID              shift and go to state 66

    typeid                         shift and go to state 87
    defined_type                   shift and go to state 69

state 51

    (48) qualifier -> OPTIONAL .

    ONOFF_T         reduce using rule 48 (qualifier -> OPTIONAL .)
    BOOL_T          reduce using rule 48 (qualifier -> OPTIONAL .)
    STRING_T        reduce using rule 48 (qualifier -> OPTIONAL .)
    BYTE_T          reduce using rule 48 (qualifier -> OPTIONAL .)
    INT8_T          reduce using rule 48 (qualifier -> OPTIONAL .)
    UINT8_T         reduce using rule 48 (qualifier -> OPTIONAL .)
    INT16_T         reduce using rule 48 (qualifier -> OPTIONAL .)
    UINT16_T        reduce using rule 48 (qualifier -> OPTIONAL .)
    INT32_T         reduce using rule 48 (qualifier -> OPTIONAL .)
    UINT32_T        reduce using rule 48 (qualifier -> OPTIONAL .)
    INT64_T         reduce using rule 48 (qualifier -> OPTIONAL .)
    UINT64_T        reduce using rule 48 (qualifier -> OPTIONAL .)
    FLOAT_T         reduce using rule 48 (qualifier -> OPTIONAL .)
    DOUBLE_T        reduce using rule 48 (qualifier -> OPTIONAL .)
    ID              reduce using rule 48 (qualifier -> OPTIONAL .)


state 52
